--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -98,7 +98,6 @@ button:hover {
 } */
 
 /* ======================= */
-/* se reemplazo el class .home-section por el siguiente: */
 .mainContainer {
   display: flex;
   align-items: center;
@@ -106,17 +105,14 @@ button:hover {
   flex-direction: column;
   text-align: center;
   flex-grow: 1;
-  overflow-y: scroll;
-  box-sizing: border-box;
-  height: 70vh;
 }
 
 /* Home */
-/* .home-section {
+.home-section {
   display: flex;
-  height: 100%;
+  height: 100vh;
   align-items: center;
-} */
+}
 
 .home-section h2 {
   font-size: 60px;
@@ -1198,69 +1194,4 @@ Estilos de Activities
 .contenedor-historia .p-texto {
   text-align: justify;
   letter-spacing: 2px;
-}
-
-/* footer */
-.footer {
-  background: var(--bg);
-  color: var(--text);
-  padding: 48px 64px;
-  font-family: Inter, system-ui,'Open Sans', Arial;
-  margin-top: 50px;
-}
-
-.contenedor-footer {
-  display: flex;
-  gap: 48px;
-  align-items: flex-start;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.footer-text {
-  margin-top: 20px;
-  color: var(--muted);
-  line-height: 1.6;
-  max-width: 500px;
-  text-align: justify;
-}
-
-.footer-heading {
-  margin: 0 0 18px 0;
-  font-size: 20px;
-  font-weight: 700;
-}
-
-.footer-list {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  gap: 18px;
-}
-
-.footer-list li {
-  cursor: default;
-  font-size: 20px;
-  font-weight: 600;
-}
-
-.contact-info {
-  font-style: normal;
-  display: flex;
-  flex-direction: column;
-  gap: 14px;
-  font-weight: 600;
-  text-align: right;
-}
-
-.footer-bottom {
-  margin-top: 48px;
-  border-top: 1px solid rgba(255,255,255,0.04);
-  padding-top: 28px;
-  color: var(--muted);
-  font-size: 20px;
-  font-weight: 700;
-  text-align: center;
 }
