--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -3,9 +3,9 @@
   align-items: center;
   position: fixed;
   z-index: 999;
-  min-width: 100vh;
   width: 100%;
   height: 80px;
+  margin-bottom: 80px;
   box-sizing: border-box;
   padding: 0 40px;
   background-color: #181818;
